- NEW: Multiselections in the log dialog show each log message
       shortened for every selected revision. See issue #44
       for details. (Stefan)
- NEW: Command line switch /outfile for the 'log' and
       'repobrowser' command. See issue #49 for details. (Stefan)
- NEW: Dragging the url from the repository browser combo
       box creates an url link in explorer. (Stefan)
- BUG: Merged revisions must be counted only 
       once in stats (Stefan Fuhrmann)
- BUG: Relative Webviewer urls didn't work from the 
       repository browser. (Stefan)

Version 1.6.11
- BUG: Using spelling dictionaries in utf8 could crash
       the commit dialog. (Stefan)
- BUG: Dialogs could hang if they were closed if the
       modeless log dialog was still open. (Stefan)
- BUG: When checking an added file in the commit dialog,
       the parent folder wasn't checked automatically if
       it was added too. (Stefan)
- BUG: when passing /tourl: to the merge command, the
       revision range page was shown instead of 
       the tree page. (Stefan)

Version 1.6.10
- BUG: Updating single items from the check-for-modifications
       dialog could lead to inconsistent working copies. (Stefan)
- BUG: Adding a file in an unversioned folder from the commit
       dialog only marked the file as added. (Stefan)
- BUG: The overlays didn't work on win2k up to XP SP2. (Stefan)
- BUG: The 'browse' button (...) in various dialogs did nothing
       when a file:/// url was specified. (Stefan)

Version 1.6.9
- BUG: the menu icons on XP were not shown correctly. (Stefan)
- BUG: the overlay icons could dissapear after upgrading from
       a previous version, a 'repair install' however would
	   fix this issue. (Stefan)
- BUG: Ignoring directories with a dot and extension in the name
       didn't work. (Stefan)
- BUG: Comparing an updated item in the update-progress dialog
       didn't work properly for items in an external 
       directory. (Stefan)

Version 1.6.8